--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Mar 31 00:33:14 SGT 2019
-ndk.dir=C\:\\Users\\zhuan\\AppData\\Local\\Android\\Sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\zhuan\\AppData\\Local\\Android\\Sdk
+#Sat Apr 13 21:28:16 SGT 2019
+sdk.dir=C\:\\Users\\JJlaptop\\AppData\\Local\\Android\\Sdk
